; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/m68knommu/platform/5249/extr_intc2.c_intc2_irq_gpio_mask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/m68knommu/platform/5249/extr_intc2.c_intc2_irq_gpio_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MCF_MBAR2 = common dso_local global i64 0, align 8
@MCFSIM2_GPIOINTENABLE = common dso_local global i64 0, align 8
@MCFINTC2_GPIOIRQ0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @intc2_irq_gpio_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intc2_irq_gpio_mask(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i64, i64* @MCF_MBAR2, align 8
  %5 = load i64, i64* @MCFSIM2_GPIOINTENABLE, align 8
  %6 = add nsw i64 %4, %5
  %7 = call i32 @readl(i64 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @MCFINTC2_GPIOIRQ0, align 4
  %10 = sub i32 %8, %9
  %11 = shl i32 1, %10
  %12 = xor i32 %11, -1
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, %12
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load i64, i64* @MCF_MBAR2, align 8
  %17 = load i64, i64* @MCFSIM2_GPIOINTENABLE, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i32 @writel(i32 %15, i64 %18)
  ret void
}

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
